# PEARLNN

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Makefile.md  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
community/: __init__.py  contribution_tracker.py  gist_manager.py  ipfs_manager.py  model_sync.py  version_control.py
components/: __init__.py  base_component.py  inductor.py
config/: community_config.yaml  default_config.yaml
config/component_configs/: inductor_config.yaml
core/: __init__.py  bayesian_nn.py  feature_extractor.py  parameter_fitter.py  uncertainty.py
data/cache/: .gitkeep
data/models/: .gitkeep
data/temp/: .gitkeep
data_processing/: __init__.py  csv_processor.py  datasheet_parser.py  image_processor.py  waveform_analyzer.py
models/: __init__.py  attention_models.py  base_model.py  bayesian_layers.py  ensemble_models.py
scripts/: benchmark.py  build_model.py  install_dependencies.sh  setup_development.py  upload_to_pypi.sh
training/: __init__.py  incremental_learning.py  loss_functions.py  trainer.py  validation.py
utils/: __init__.py  config.py  file_utils.py  logger.py  math_utils.py  visualization.py
